# wasthat

./: Cargo.toml  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  workspace.yml
examples/return-number/: Cargo.toml  README.md
examples/return-number/src/: lib.rs
